# reflexlm

./: .gitattributes  .gitignore  CONTRIBUTING.md  DATA_LICENSE_NOTICE.md  LICENSE-CODE-MIT  LICENSE.txt  README.md  SECURITY.md  native_synaptic_interface_research.md  pyproject.toml
.github/workflows/: ci.yml
artifacts/: README.md
configs/: phase2b_unified_qwen7b.yaml  phase2c_native_nervous.yaml  phase2d_final_validation.yaml  phase2e_transition_canary.yaml  phase2e_transition_validation.yaml  phase2f_rich_latent_canary.yaml  phase2f_rich_latent_fusion_canary.yaml  phase2f_transition_cache_canary.yaml  phase2f_transition_cache_final.yaml  phase2g_semantic_required.yaml  phase2h_semantic_pairwise.yaml  phase2i_semantic_pairwise.yaml  phase2s_public_repair_repos.json  project_spec.yaml  small_model_gain_gate.yaml
configs/models/: qwen2.5-7b-instruct-manifest.json
configs/reflexcore/: local.yaml  local_pe_calibrated.yaml  smoke.yaml
docs/: reflexcore_v0.md  repository_layout.md
docs/figures/: README.md
docs/paper_b/: README.md  main.tex  references.bib
docs/reflexcore_evidence/: reflexcore_action_conditioned_world_audit_20260621.json  reflexcore_homeostatic_motor_audit_20260621.json  reflexcore_local53m_fullprofile_ablation_rollup_20260620.json  reflexcore_local_pe_calibrated_architecture_audit_20260621.json  reflexcore_numeric_action_aux025_formal_sensory_ablation_matrix_20260620.json  reflexcore_numeric_action_aux025_fullprofile_ablation_rollup_20260620.json  reflexcore_numeric_action_aux025_mechanism_dossier_20260621.json  reflexcore_numeric_action_aux025_runtime_evidence_audit_20260621.json  (+2 more)
docs/spec/: architecture_iteration_review_2026-05-22.md  (+21 more)
scripts/: audit-public-release.py  check-phase1b-promotion-readiness.ps1  check-qwen7b-download.ps1  export-public-repository.py  pull-phase2n-small-models.ps1  render-paper-b-tables.py  render-paper-figures.py  run-phase1b-wide-ood.ps1  run-phase2-qwen7b.ps1  run-phase2-when-ready.ps1  run-phase2b-unified-qwen7b.ps1  run-phase2c-native-heads.ps1  run-phase2d-final-validation.ps1  run-phase2n-native-head-reproduction.ps1  run-phase2s-seed-reproduction.ps1  run-qwen05b-tiny-overfit.ps1  run-route-experts-resume.ps1  run-small-model-gain-iteration.ps1  summarize-phase1b-layered.ps1  verify-phase2w-reproduction.ps1
src/: sitecustomize.py
tests/: test_action_conditioned_world_model.py  test_dataset_generation.py  test_eval_pipeline.py  test_event_gated_sequence_policy.py  test_experiment.py  test_feature_vectorizer_optional_text.py  test_homeostatic_synaptic_control.py  test_layered_scope.py  test_native_head_model_loading.py  test_native_head_only_zero_nsi_control.py  test_native_nervous_runtime.py  test_observable_recovery_state.py  test_oracle.py  test_paper_b_boundary_review.py  test_paper_b_hardening.py  test_phase2_architecture_claim_boundary_report.py  test_phase2_sft.py  test_phase2_sidecar_package_readiness.py  test_phase2aa_bounded_patch_candidates.py  test_phase2aa_phase2at_runtime_boundary_report.py  test_phase2aa_runtime_replication_report.py  test_phase2ab_identity_ambiguous_patch_candidates.py  test_phase2ac_budget_pressure_patch_candidates.py  test_phase2ad_residual_budget_pressure_patch_candidates.py  test_phase2ae_freeze.py  test_phase2ae_structural_sidecar_budget_pressure_patch_candidates.py  test_phase2af_hardened_failure_audit.py  test_phase2af_hardened_structural_sidecar.py  test_phase2af_hardened_structural_sidecar_split.py  test_phase2af_holdout_failure_audit.py  test_phase2af_holdout_postflight.py  test_phase2af_prediction_failure_diagnostic.py  test_phase2af_shortcut_bucket_gap_report.py  test_phase2af_smoke_postflight.py  test_phase2af_tie_residual_feasibility.py  test_phase2ag_evidence_sufficiency_report.py  test_phase2ag_sidecar_control_postflight.py  test_phase2ag_sidecar_controls.py  test_phase2ag_smoke_postflight.py  test_phase2ag_verifiable_candidate_sidecar.py  (+316 more)
(+563 files in other folders)
