[build-system]
requires = ["setuptools>=69", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "reflexlm"
version = "0.1.2"
description = "Phase 1 Native Synaptic Interface runtime, dataset, training, and evaluation scaffold."
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
  "numpy>=2.0",
  "psutil>=7.2",
  "pydantic>=2.12",
  "pyyaml>=6.0",
  "torch>=2.9",
]

[project.optional-dependencies]
dev = [
  "matplotlib>=3.9",
  "pytest>=9.0",
]
llm = [
  "accelerate>=1.8",
  "bitsandbytes>=0.48",
  "peft>=0.17",
  "transformers>=4.51",
]

[tool.pytest.ini_options]
pythonpath = ["src"]
testpaths = ["tests"]

[tool.setuptools]
package-dir = {"" = "src"}

[tool.setuptools.packages.find]
where = ["src"]
